--- a/source/Qt-Qml-Library-Project/appveyor.yml
+++ b/source/Qt-Qml-Library-Project/appveyor.yml
@@ -18,10 +18,10 @@ build_script:
   - go get qpm.io/qpm
   - go install qpm.io/qpm
   - dir %GOPATH%\bin
-  - cd tests\MYPROJECTunittests 
+  - cd tests\unittests
   - qpm install
-  - qmake MYPROJECTunittests.pro
+  - qmake unittests.pro
   - nmake
   - dir /w
   - dir release /w
-  - release\MYPROJECTunittests
+  - release\unittests
