Flux-Application-Full: Add package.json to hold the list of build scripts

--- a/source/Flux-Application-Full/.gitignore
+++ b/source/Flux-Application-Full/.gitignore
@@ -85,10 +85,15 @@ gradle.properties
 !gradle-wrapper.jar
 *.iml
 
+# Node
+# ----
+node_modules
+
 # Qt
 # ---
 qmlimport.path
 *.qmlc
 *.jsc
+
 
 
