--- a/source/Flux-Application-Full/deployment/linux/MYPROJECT.desktop
+++ b/source/Flux-Application-Full/deployment/linux/MYPROJECT.desktop
@@ -3,7 +3,7 @@ Name=MYPROJECT
 GenericName=MYPROJECT
 Comment=MYPROJECT
 Icon=/icon.png
-Exec=MYPROJECT
+Exec=AppRun
 TryExec=MYPROJECT
 Terminal=false
 Type=Application
