--- a/source/Flux-Application-Full/deployment/linux/snapcraft.yaml
+++ b/source/Flux-Application-Full/deployment/linux/snapcraft.yaml
@@ -1,10 +1,8 @@
-name: lanto
-version: '1.0.2' # just for humans, typically '1.2+git' or '1.3.2'
-summary: An Intuitive Batch Photo Resizer
+name: quickfluxproject
+version: '1.0.0' # just for humans, typically '1.2+git' or '1.3.2'
+summary: Summary
 description: |
-  Simply drag photos over to Lanto. They will be converted to the format you desired.
-  With intuitive user interface and powerful functions, you don't need to learn anything
-  in order to use this application.
+  Description
 grade: stable
 confinement: strict
 
@@ -20,7 +18,7 @@ parts:
     - fontconfig-config
 
 apps:
-  lanto:
-    command: qt5-launch $SNAP/Lanto
+  myproject:
+    command: qt5-launch $SNAP/AppRun
     plugs: [x11, home, opengl, desktop, gsettings, removable-media]
-    desktop: lanto.desktop
+    desktop: MYPROJECT.desktop
