--- a/Flux-Application-Full/Flux Application (Full)/.gitignore
+++ b/Flux-Application-Full/Flux Application (Full)/.gitignore
@@ -85,10 +85,16 @@ gradle.properties
 !gradle-wrapper.jar
 *.iml
 
+# Node
+# ----
+node_modules
+npm-debug.log
+
 # Qt
 # ---
 qmlimport.path
 *.qmlc
 *.jsc
+
 
 
