--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,10 +15,13 @@ build_script:
   - set GOPATH=c:\gopath
   - set QTDIR=C:\Qt\5.9.5\msvc2015_64
   - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin;%GOPATH%\bin;
+  - set ROOT_DIR=%cd%
   - go get qpm.io/qpm
   - go install qpm.io/qpm
   - dir %GOPATH%\bin
   - cd source\Flux-Application-Full
   - qmake
   - nmake
+  - cd %ROOT_DIR%
+  - cd source/Qt-Qml-Library-Project && qmake && nmake
  
