--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,9 +23,10 @@ build_script:
   - cd %ROOT_DIR%
   - cd source/Qt-Qml-Library-Project
   - qmake
-  - name & exit 0
+  - nmake & exit 0
   - tree /F /a
-  
+
+  - cd %ROOT_DIR%
   - cd source\Flux-Application-Full && qmake && nmake
   
 
