--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,9 +11,9 @@ environment:
     qt: msvc2017
 
 build_script:
-  - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
+  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
   - set GOPATH=c:\gopath
-  - set QTDIR=C:\Qt\5.9.5\msvc2015_64
+  - set QTDIR=C:\Qt\5.9.7\msvc2015_64
   - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin;%GOPATH%\bin;
   - set ROOT_DIR=%cd%
   - go get qpm.io/qpm
